# mastodon-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: testing.yml
mastodon_bot/: main.py
