[tool.poetry]
name = "mastodon-bot"
version = "0.1.0"
description = "A Mastodon Bot"
authors = ["Mathieu Mescam <mate@e.email>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mastodon-py = "^1.8.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.7.0"
mypy = ">=1.5.0"
pre-commit = ">=3.3.3"
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.0.284"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=mastodon_bot --cov-report term-missing"

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = 100
target-version = "py38"
fix = true
